--- a/src/index.css
+++ b/src/index.css
@@ -1,70 +1,65 @@
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --color-primary: #ff577f;
+  --color-primary-focus: #ff427f;
+  --color-primary-negative: #59323f;
+
+  --color-grey-0: #f8f9fa;
+  --color-grey-1: #868e96;
+  --color-grey-2: #343b41;
+  --color-grey-3: #212529;
+  --color-grey-4: #121214;
+
+  --radius-1: 4px;
+
+  --font-title-1: 18px;
+  --font-title-2: 16px;
+
+  --font-text-1: 14px;
+  --font-text-2: 12px;
+  --font-text-3: 10px;
+
+  --font-weigth-1: 700;
+  --font-weigth-2: 600;
+  --font-weigth-3: 500;
+  --font-weigth-4: 400;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+html,
+body,
+header,
+ul,
+li,
+img,
+p,
+h1,
+h2,
+h3,
+nav,
+div,
+a,
+section,
+form,
+input,
+select,
+button,
+option,
+label {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+  outline: none;
+  border: none;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  background-color: #000000;
 }
