--- a/src/pages/signup/style.css
+++ b/src/pages/signup/style.css
@@ -1,3 +1,10 @@
-h2 {
-    color: var(--color-grey-0);
+
+.register-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    margin: 50px auto;
+
+    max-width: 400px;
 }
