--- a/src/pages/dashboard/style.css
+++ b/src/pages/dashboard/style.css
@@ -26,17 +26,24 @@
     width: 90%;
 }
 
-.dashboard-perfil {
+.container {
+    width: 100vw;
+    border-top: 1px solid var(--color-grey-3);
+    border-bottom: 1px solid var(--color-grey-3);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    padding: 35px 10px;
+}
+
+.dashboard-perfil {
+   
 
     gap: 10px;
     width: 90%;
 
-    border-top: 1px solid var(--color-grey-3);
-    border-bottom: 1px solid var(--color-grey-3);
-    padding: 35px 10px;
+    
+    
 }
 
 
