--- a/src/pages/dashboard/style.css
+++ b/src/pages/dashboard/style.css
@@ -1,5 +1,10 @@
 .carregando {
-    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+    width: 100vw;
+    height: 100vh;
 }
 
 .carregando h2 {
@@ -8,14 +13,13 @@
 }
 
 .page-dashboard {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+   
+    display:flex;
+    flex-direction:column;
 
-    margin: 50px auto;
-    gap: 30px;
-
-    max-width: 1000px;
+    margin-top:50px;
+    
+   
 }
 
 .dashboard-header {
