--- a/src/pages/dashboard/style.css
+++ b/src/pages/dashboard/style.css
@@ -18,9 +18,14 @@
     flex-direction:column;
 
     margin-top:50px;
-    
-   
+    height:100vh;
 }
+.container-dashboard{
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+}
+
 
 .dashboard-header {
     display: flex;
@@ -28,6 +33,17 @@
     justify-content: space-between;
 
     width: 90%;
+}
+
+.container-perfil{
+    width:100%;
+    display:flex;
+    justify-content:center;
+
+    margin-top:30px;
+    margin-bottom:30px;
+
+    border: 1px solid var(--color-grey-3);
 }
 
 .dashboard-perfil {
@@ -38,8 +54,6 @@
     gap: 10px;
     width: 90%;
 
-    border-top: 1px solid var(--color-grey-3);
-    border-bottom: 1px solid var(--color-grey-3);
     padding: 35px 10px;
 }
 
