--- a/src/pages/dashboard/style.css
+++ b/src/pages/dashboard/style.css
@@ -33,6 +33,7 @@
     justify-content: space-between;
 
     width: 90%;
+    max-width: 800px;
 }
 
 .container-perfil{
@@ -53,6 +54,7 @@
 
     gap: 10px;
     width: 90%;
+    max-width: 800px;
 
     padding: 35px 10px;
 }
@@ -77,6 +79,7 @@
         display: none;
         flex-direction: column;
         width: 90%;
+        max-width: 800px;
     
         padding-left: 0.8rem;
         padding-top: 0.8rem;
